UI changes and version update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_dynamic_login
-description: "A simple flutter dynamic login screen"
-version: 0.0.1
-homepage:
+description: "A simple yet customizable dynamic login screen for Flutter apps, featuring email and password input fields with validation. Designed with clean UI, rounded icon buttons, and responsive layout—perfect for fast prototyping or production-ready authentication flows."
+version: 0.0.2
+homepage: https://github.com/Shahid1611/flutter_dynamic_login
 
 environment:
   sdk: ^3.8.1
