--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -58,6 +58,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/sample_logo.png
+    - assets/images/google_sample.png
+    - assets/images/facebook_sample.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
