--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
     - assets/images/sample_logo.png
     - assets/images/google_sample.png
     - assets/images/facebook_sample.png
+    - assets/display/screen_record.gif
+    - assets/display/icons_visibility.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
